# AIVillage

./: .bandit  .coverage  .coveragerc  .env.development  .env.example  .env.integration  .env.mcp  .env.mcp.new  .env.security  .env.template  .env.test  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .roomodes  .secrets.baseline  =3.10.5  ADAS_TRANSFORMER2_IMPLEMENTATION.md  AGENTS.md  AGENT_6_MISSION_COMPLETE.md  AGENT_FORGE_PIPELINE_COMPLETE.md  AIVILLAGE_COMPLETION_ANALYSIS.md  AIVILLAGE_MASTER_ANALYSIS_REFERENCE.md  AI_VILLAGE_EXPANSION_PLAN.md  AI_VILLAGE_INTEGRATION_READINESS_V2.md  AI_VILLAGE_INTEGRATION_READINESS_V3.md  ATLANTIS_DEVELOPMENT_READY.md  ATLANTIS_VISION_ALIGNMENT_REPORT.md  BITCHAT_MVP_COMPLETE.md  BRANCHING_STRATEGY.md  CHANGELOG.md  CHANGE_MODEL_GUIDE.md  CICD_DIAGNOSTIC_REPORT.md  CI_CD_INTEGRATION_TEST_ANALYSIS.md  CI_CD_RECOVERY_REPORT.md  CLASSES.txt  CLAUDE.md  CLEANUP_PLAN.md  (+335 more)
backups/cleanup_backup_1755945741/: .pre-commit-config.yaml  Cargo.toml  __init__.py  pyproject.toml  test_agent_integration.py  test_agent_system.py  test_memory_simple.py  test_parameter_analysis.py  test_simple_agent_system.py
backups/cleanup_backup_1755945741/apps/: __init__.py
backups/cleanup_backup_1755945741/config/: aivillage_config.yaml  aivillage_config_development.yaml  architecture_rules.yaml  deploy.yaml  flags.yaml  hyperag_mcp.yaml  ruff_magic_literal_rules.toml  scanner_config.yaml  unified_p2p_config.py
backups/cleanup_backup_1755945741/core/: __init__.py
backups/cleanup_backup_1755945741/devops/: __init__.py
backups/cleanup_backup_1755945741/examples/: hyper_rag_example.py  resilient_chat_demo.py
backups/cleanup_backup_1755945741/integrations/: __init__.py
backups/cleanup_backup_1755945741/scripts/: architectural_analysis.py  architectural_fitness_functions.py  check_circular_deps.py  check_connascence.py  ci_integration.py  cogment_cleanup.py  complete_phase2_migrations.py  coupling_metrics.py  detect_anti_patterns.py  generate_constants_imports.py  generate_cost_analysis.py  import_migration_fix.py  monitor_performance.py  setup_architecture_tools.py  unified_cleanup_framework.py  validate_p2p_test_suite.py  validate_rag_components.py  validate_resilient_chat.py
backups/cleanup_backup_1755945741/tests/: agent_forge_validation_report.py  conftest.py  conftest_fixtures.py  conftest_root.py  experimental_validator.py  final_compression_validation.py  import_test_suite.py  minimal_agent_test.py  pipeline_validation_test.py  production_validation_complete.py  real_world_simulation_test.py  simple_message_test.py  speed_benchmark.py  standalone_agent_test.py  test_actual_functionality.py  test_advanced_compression.py  test_clean_architecture.py  test_communications_real.py  test_compression.py  test_compression_integration.py  test_compression_only.py  test_confidence_estimator.py  test_connascence_detection.py  test_consolidated_systems.py  test_coverage_dashboard.py  test_coverage_monitor.py  test_covert_isolated.py  test_critical_system_validation.py  test_dashboard_generator.py  test_emergency_triage.py  test_evolution_metrics_persistence.py  test_evolution_system.py  test_fog_rag_shutdown.py  test_gated_ltm_integration.py  test_global_south_integration.py  test_integrated_and_cascade.py  test_king_agent.py  test_magi_specialization.py  test_missing_credentials.py  test_mock_replacement_analysis.py  (+25 more)
betanet-bounty/: .rustfmt.toml  BOUNTY_COMPLETION_REPORT.md  BUILD_INSTRUCTIONS.md  Cargo.toml  FORENSIC_AUDIT_RESPONSE.md  INTEGRATED_SYSTEM_VERIFICATION.md  LICENSE  Makefile  NOISE_KEY_RENEGOTIATION_IMPLEMENTATION.md  README.md  audit_framework.sh  comprehensive_system_integration_test.py  final-sbom.json  generate_coverage_report.py  integrated_system_test.sh  validate_federated.py
betanet-bounty/.github/workflows/: betanet-ci.yml  betanet-linter.yml  c-library-ci.yml  ci.yml  fuzz-smoke.yml
betanet-bounty/artifacts/: quic_masque_demo_20250816_163250_traffic.pcap.txt
betanet-bounty/artifacts/ja3_ja4/: ja3_ja4_test_output.txt
betanet-bounty/artifacts/pcaps/: chrome_amazon.pcap
betanet-bounty/betanet-bounty/artifacts/: quic_masque_demo_20250816_163250_traffic.pcap.txt
betanet-bounty/crates/agent-fabric/: Cargo.toml
betanet-bounty/crates/betanet-dtn/: Cargo.toml
betanet-bounty/crates/betanet-ffi/: Cargo.toml
betanet-bounty/crates/betanet-htx/: Cargo.toml
betanet-bounty/crates/betanet-linter/: Cargo.toml
betanet-bounty/crates/betanet-mixnode/: Cargo.toml
betanet-bounty/crates/betanet-utls/: Cargo.toml
betanet-bounty/examples/: agent_ping.rs  dtn_plaintext_guard_demo.rs  echo_client.rs  htx_quic_datagram_demo.rs  ks_test_harness.rs
betanet-bounty/ffi/betanet-c/: CMakeLists.txt  Cargo.toml  README.md  betanet.pc.in  build.rs
betanet-bounty/scripts/: generate_mixnode_artifacts.rs  run_quic_masque_demo.sh
betanet-bounty/submission/: SUBMISSION_MANIFEST.md
betanet-bounty/submission/reports/: artifact_freshness.txt
betanet-bounty/tools/bench/: dtn-scheduler-bench.sh  mixnode_bench.rs
betanet-bounty/tools/fuzz/: fuzz-all.sh
betanet-bounty/tools/interop/: mixnode_interop.rs
betanet-client/: Cargo.toml  README.md
betanet-client/src/: cffi.rs  lib.rs
betanet-client/src/gateway/: mod.rs
betanet-client/src/integration/: mod.rs
betanet-client/src/metrics/: kpi_metrics.rs  mod.rs
betanet-client/src/transport/: fallback_manager.rs  htx.rs  mod.rs
betanet-gateway/: Cargo.toml  build.rs
betanet-gateway/benches/: anti_replay.rs  encapsulation.rs
betanet-gateway/docs/: SCION_E2E_DEMO.md  SCION_GATEWAY.md
betanet-gateway/src/: aead.rs  anti_replay.rs  config.rs  encap.rs  htx_server.rs  integrated_protection.rs  main.rs  metrics.rs  multipath.rs  scion_client.rs
crates/betanet-ffi/: Cargo.toml  Makefile
crates/betanet-htx/: Cargo.toml
infrastructure/p2p/: MANIFEST.in  PACKAGE_ARCHITECTURE.md  __init__.py  cli.py  pyproject.toml  scion_gateway.py  setup.py
libbetanet/: .gitignore  CMakeLists.txt  Cargo.toml  meson.build
libbetanet/include/: betanet.h
(+7960 files in other folders)
