[project]
name = "aivillage"
version = "0.5.1"
description = "Self-improving multi-agent system with evolutionary capabilities"
authors = [
    {name = "AIVillage Team", email = "team@aivillage.dev"}
]
maintainers = [
    {name = "AIVillage Team", email = "team@aivillage.dev"}
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ai", "multi-agent", "evolutionary", "machine-learning", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core Web Framework
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "aiohttp>=3.12.14",
    "httpx>=0.27.0",
    "websockets>=12.0",
    
    # Database & Storage
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.8",
    "aiosqlite>=0.20.0",
    "neo4j>=5.3.0",
    "qdrant-client>=1.11.1",
    
    # AI/ML Core Stack
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "transformers>=4.44.0",
    "tokenizers>=0.19.1",
    "accelerate>=0.30.3",
    "bitsandbytes>=0.43.1",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.5",
    
    # AI/ML Extensions
    "sentence-transformers>=3.0.1",
    "faiss-cpu>=1.8.0",
    "triton>=2.3.0; platform_machine != 'arm64' and platform_system != 'Windows'",
    "xformers>=0.0.26; platform_machine != 'arm64' and platform_system != 'Windows'",
    "peft>=0.12.0",
    
    # Data Science & Analysis
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.14.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "matplotlib>=3.9.1",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
    
    # Security & Authentication
    "cryptography>=43.0.1",
    "PyJWT>=2.9.0",
    "bcrypt>=4.2.0",
    "Authlib>=1.3.1",
    
    # Web Security & Templates
    "Jinja2>=3.1.4",
    "Werkzeug>=3.0.6",
    "bleach>=6.1.0",
    "pillow>=10.4.0",
    
    # HTTP & Networking
    "requests>=2.32.3",
    "urllib3>=2.2.2",
    "certifi>=2024.7.4",
    
    # Configuration & Utilities
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "click>=8.1.7",
    "tqdm>=4.66.5",
    "rich>=13.7.1",
    
    # Performance & Serialization
    "orjson>=3.10.6",
    "msgpack>=1.0.8",
    "lz4>=4.3.3",
    "zstandard>=0.23.0",
    "psutil>=6.0.0",
    
    # AI Services Integration
    "openai>=1.40.1",
    "anthropic>=0.28.0",
    "ollama>=0.3.2",
    
    # Text Processing & NLP
    "nltk>=3.8.1",
    "langdetect>=1.0.9",
    "beautifulsoup4>=4.12.3",
    "textstat>=0.7.4",
    
    # Graph & Network Processing
    "networkx>=3.3",
    "community>=1.0.0b1",
    
    # System Integration
    "plyer>=2.1.0",
    "fsspec>=2024.6.1",
    
    # Compatibility & Type Support
    "typing-extensions>=4.12.2",
    "packaging>=24.1",
]

[project.optional-dependencies]
dev = [
    # Testing Framework
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "pytest-benchmark>=4.0.0",
    "pytest-randomly>=3.15.0",
    "pytest-env>=1.1.3",
    
    # Code Quality & Formatting
    "black>=24.8.0",
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "pycodestyle>=2.12.1",
    "bandit>=1.7.7",
    
    # Development Tools
    "pre-commit>=3.8.0",
    "coverage>=7.6.1",
    "hypothesis>=6.111.0",
    "ipython>=8.26.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.2.4",
    
    # Documentation
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
    
    # Monitoring & Debugging
    "wandb>=0.17.8",
    "memray>=1.13.4",
]

test = [
    # Core Testing
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "pytest-benchmark>=4.0.0",
    
    # Mocking & Test Data
    "responses>=0.25.3",
    "fakeredis>=2.23.4",
    "freezegun>=1.5.1",
    "factory-boy>=3.3.1",
    
    # Test Infrastructure
    "docker>=7.1.0",
    "moto>=5.0.12",
    "testcontainers>=4.7.2",
]

experimental = [
    # Experimental ML Features
    "grokfast>=0.1.0",
    "mcts>=1.0.0",
    "gym>=0.29.1",
    "stable-baselines3>=2.3.2",
    
    # Advanced AI Models
    "llama-cpp-python>=0.2.89",
    "chromadb>=0.5.7",
    "langchain>=0.2.16",
    "langchain-community>=0.2.16",
    
    # Image & Vision
    "opencv-python>=4.10.0",
    "imageio>=2.34.2",
    "scikit-image>=0.24.0",
    
    # Audio Processing
    "librosa>=0.10.2",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.1",
    
    # Advanced Analytics
    "streamlit>=1.37.1",
    "gradio>=4.44.0",
    "bokeh>=3.5.2",
]

security = [
    # Security Scanning
    "pip-audit>=2.7.3",
    "safety>=3.2.7",
    "bandit>=1.7.7",
    
    # Enhanced Security
    "pyotp>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

production = [
    # Production Server
    "gunicorn>=23.0.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.4.0",
    "sentry-sdk>=2.13.0",
    
    # Production Optimization
    "uvloop>=0.20.0; platform_system != 'Windows'",
    "httptools>=0.6.1",
]

[project.urls]
Homepage = "https://github.com/aivillage/aivillage"
Documentation = "https://aivillage.readthedocs.io/"
Repository = "https://github.com/aivillage/aivillage.git"
"Bug Tracker" = "https://github.com/aivillage/aivillage/issues"
Changelog = "https://github.com/aivillage/aivillage/blob/main/CHANGELOG.md"

[project.scripts]
aivillage = "core.cli:main"
forge = "agent_forge.cli:main"
village-dashboard = "core.dashboard:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

# Linting and formatting configuration
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # numpy
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "S101", # Use of assert detected
    "COM812", # Trailing comma missing
    "ISC001", # Implicit string concatenation
    "T201", # print found
    "T203", # pprint found
    "PD011", # Use .to_numpy() instead of .values
    "RET504", # Unnecessary variable assignment
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "PLR2004", # Magic value used in comparison
]
"stubs/**/*.py" = [
    "D",      # pydocstyle
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "ERA001", # Found commented-out code
]
"**/conftest.py" = ["D", "ANN"]
"setup.py" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["agents", "communications", "core", "agent_forge", "utils", "ingestion"]
force-sort-within-sections = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
# Exclude generated files
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | models
  | download_env
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "stubs.*",
    "langroid.*",
    "qdrant_client.*",
    "neo4j.*",
    "faiss.*",
    "chromadb.*",
    "ollama.*",
    "bitsandbytes.*",
    "transformers.*",
    "accelerate.*",
    "peft.*",
    "triton.*",
    "xformers.*",
    "sentence_transformers.*",
    "gym.*",
    "mcts.*",
    "llama_cpp.*",
    "grokfast.*",
    "sleep_and_dream.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "stubs", "models", "download_env"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for tests

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "stubs/*",
    "models/*",
    "download_env/*",
    ".claude/*",
    "setup.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
