[workspace]
resolver = "2"
members = [
    "crates/betanet-htx",
    "crates/betanet-mixnode",
    "crates/betanet-utls",
    "crates/betanet-linter",
    "crates/betanet-dtn",
    "crates/bitchat-cla",
    "crates/betanet-cla",
    "crates/navigator",
    "crates/agent-fabric",
    "crates/twin-vault",
    "crates/federated",
    "crates/betanet-ffi",
    "ffi/betanet-c",
]
exclude = [
    # Exclude existing Rust Betanet components to avoid conflicts
    "../platforms/rust/betanet/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["Betanet Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/betanet/betanet-bounty"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Networking
quinn = { version = "0.11", default-features = false, features = ["rustls"] }
rustls = "0.22"

# Cryptography
chacha20poly1305 = "=0.10.1"
hkdf = "=0.12.3"
sha2 = "=0.10.6"
hmac = "=0.12.1"
ed25519-dalek = "=1.0.0"
x25519-dalek = "=1.1.1"
snow = "=0.9.2"
rand = { version = "=0.8.5", features = ["getrandom"] }
rand_core = { version = "=0.6.4", features = ["getrandom"] }
rand_chacha = "=0.3.1"
base64ct = "=1.5.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.5"
criterion = "0.4"  # Use older version compatible with rust 1.78
tempfile = "3.13"

# Utilities and patterns
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"

# TLS and networking
rustls-pki-types = "1.7"
tokio-rustls = "0.25"
webpki-roots = "0.25"

# Data structures and concurrency
dashmap = "6.1"
parking_lot = "0.12"

# DTN and storage
sled = "0.34"
crc = "3.0"
chrono = { version = "0.4", features = ["serde"] }


# Build tools and utilities
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
cargo_metadata = "0.18"
toml = "0.8"
md5 = "0.7"
hex = "0.4"
libc = "0.2"
cbindgen = "0.24"

# Navigator-specific dependencies
ordered-float = "4.5"

# Twin vault dependencies
coset = "=0.3.7"
keyring = "=2.0.3"

# Federated learning dependencies
ndarray = "0.15"
nalgebra = "0.32"
num-traits = "0.2"

# OpenSSL for Windows compatibility
openssl-sys = { version = "0.9", features = ["vendored"] }

# Dependency compatibility fixes for Rust 1.78
half = "=1.8.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
inherits = "release"

[profile.fuzz]
inherits = "dev"
opt-level = 3
debug = true
