[package]
name = "betanet-gateway"
version = "0.1.0"
edition = "2021"
authors = ["AIVillage Team"]
description = "Betanet Gateway - SCION tunnel termination and packet encapsulation"
license = "MIT"
repository = "https://github.com/aivillage/aivillage"

[dependencies]
# Async runtime and HTTP
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
h3 = "0.0.4"
h3-quinn = "0.0.4"
quinn = "0.10"

# gRPC client
tonic = { version = "0.10", features = ["gzip"] }
prost = "0.12"

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.8"
blake3 = "1.5"
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"
url = "2.4"
hex = "0.4"

# Database
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
lmdb = "0.8"

# Metrics and monitoring
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Network and protocols
bytes = "1.5"
http = "1.0"

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.13"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance and utilities
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[[bin]]
name = "betanet-gateway"
path = "src/main.rs"

[[bench]]
name = "encapsulation"
harness = false

[[bench]]
name = "anti_replay"
harness = false

[[bench]]
name = "multipath"
harness = false

[build-dependencies]
tonic-build = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
debug = true