cmake_minimum_required(VERSION 3.15)
project(libbetanet_c LANGUAGES C)
find_package(PkgConfig REQUIRED)
pkg_check_modules(BETANET REQUIRED betanet)
include_directories(${BETANET_INCLUDE_DIRS})
link_directories(${BETANET_LIBRARY_DIRS})
add_executable(echo_server ../examples/echo_server.c)
add_executable(echo_client ../examples/echo_client.c)
target_link_libraries(echo_server ${BETANET_LIBRARIES})
target_link_libraries(echo_client ${BETANET_LIBRARIES})
enable_testing()
