[workspace]
members = [
    # The betanet-bounty has its own workspace, don't include it here
]
exclude = [
    "packages/p2p/betanet-bounty",
    "build",
    "clients/rust"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.70"
authors = ["AI Village"]
repository = "https://example.com"
